--- a/02VueRouter/07命名视图.html
+++ b/02VueRouter/07命名视图.html
@@ -72,6 +72,7 @@
       routes: [{
         path: "/",
         components: {
+          // 下面的键值对，键就是router-view的name，值就是定义的组件
           // default: headerComponent,
           header: headerComponent,
           sidebar: sidebarComponent,
